Wed Jun 26 16:58:14 2002                        Michael Jennings (mej)

Latest Escreen stuff from Azundris, including work on twin support
(twin.sourceforge.net).
----------------------------------------------------------------------
Wed Jun 26 23:14:20 2002                        Michael Jennings (mej)

Bug-hunting....
----------------------------------------------------------------------
Thu Jun 27 09:14:39 2002                        Michael Jennings (mej)

Fix compile when Escreen support is disabled.
----------------------------------------------------------------------
Fri Jun 28 16:40:55 2002                        Michael Jennings (mej)

Additional twin stuff, plus a bug fix for dragging Escreen buttons.
----------------------------------------------------------------------
Fri Jun 28 17:02:57 2002                        Michael Jennings (mej)

One too many....
----------------------------------------------------------------------
Wed Jul  3 13:49:27 2002                        Michael Jennings (mej)

Fixed a bug in libscream that caused remote screen sessions to be
resumed with, e.g., "-e ^Uu_" instead of "-e ^Uu".

Applied a bug fix from Bill Allombert <allomber@math.u-bordeaux.fr>
where I was using the wrong variable for loading the icon file from
disk.

Also fixed a problem where PrintScreen would cause Eterm to exit.
Pointed out by Laurence J. Lane <ljlane@debian.org>.
----------------------------------------------------------------------
Thu Jul 11 20:03:23 2002                        Michael Jennings (mej)

Each side of an || must have a valid shell command.
----------------------------------------------------------------------
Thu Jul 11 20:39:28 2002                        Michael Jennings (mej)

Addition to last fix.  Also, we're going to specify error messages
that *should* be shown and ignore others, not show all but a select
few.  This helps with the status line issue.
----------------------------------------------------------------------